feat: add codeblock components

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,82 @@
 [contenteditable] {
   outline-style: none;
 }
+
+.CodeMirror__container .CodeMirror {
+  color: #F8F8F8;
+  background-color: #0c1021;
+  height: auto;
+  padding: 18px;
+  padding-left: 12px;
+  border-radius: 5px;
+  line-height: 1.7;
+  font-size: 14px;
+  font-family: 'Monaco', '楷体';
+}
+
+.CodeMirror-scroll,
+.CodeMirror-hscrollbar {
+  overflow: hidden;
+}
+
+.CodeMirror-gutters {
+  background-color: unset;
+  border-right: none;
+}
+
+.CodeMirror-linenumber {
+  cursor: pointer;
+}
+
+.cm-string, .cm-string-2 {
+  color: #61CE3C;
+}
+
+.cm-comment {
+  color: #AEAEAE;
+}
+
+.cm-variable {
+  color: '#FF6400';
+}
+
+.cm-variable-2 {
+  color: '#FF6400';
+}
+
+.cm-variable-3 {
+  color: '#FF6400';
+}
+
+.cm-number {
+  color: #D8FA3C;
+}
+
+.cm-keyword {
+  color: #FBDE2D;
+}
+
+.cm-property {
+  color: #fff;
+}
+
+.cm-def {
+  color: #8DA6CE;
+}
+
+.cm-meta {
+  color: #D8FA3C;
+}
+
+.cm-operator {
+  color: #fff;
+}
+
+.am-attribute {
+  color: #8DA6CE;
+}
+
+.cm-tag {
+  color: #8DA6CE;
+}
+
