--- a/src/components/Highlight/index.module.less
+++ b/src/components/Highlight/index.module.less
@@ -1,14 +1,15 @@
 .highlight {
-  --comments-background-color: rgba(255, 212, 0, 0.14);
-  --comments-border-color: rgb(255, 212, 0);
-  --hover-color: rgba(255, 212, 0, 0.42);
   background: var(--comments-background-color);
   border-bottom: 2px solid var(--comments-border-color);
-  padding-bottom: 2px;
-  cursor: pointer;
 
-  &:hover {
-    background-color: var(--hover-color);
+  //&:hover {
+  //  background-color: var(--hover-color);
+  //}
+
+  &.yellow {
+    --comments-background-color: rgba(255, 212, 0, 0.14);
+    --comments-border-color: rgb(255, 212, 0);
+    --hover-color: rgba(255, 212, 0, 0.42);
   }
   
   &.red {
