--- a/src/components/FormattedText/index.module.less
+++ b/src/components/FormattedText/index.module.less
@@ -1,8 +1,8 @@
 .bold {
   font-weight: bold;
-  background-image: linear-gradient(to right, #c471f5 0%, #fa71cd 100%);
-  color: transparent;
-  -webkit-background-clip: text;
+  //background-image: linear-gradient(to right, #c471f5 0%, #fa71cd 100%);
+  //color: transparent;
+  //-webkit-background-clip: text;
 }
 .italic {
   font-style: italic;
