--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 body {
-  --font: 'Merriweather', '楷体';
-  --mono-font: 'JetBrains Mono', '楷体';
+  --font: 'Merriweather', '楷体', '楷体-简';
+  --mono-font: 'JetBrains Mono', '楷体-简';
   font-family: var(--font);
   padding: 0;
   margin: 0;
