--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -3,5 +3,6 @@
   max-width: 100%;
   margin: 0 auto 10px;
   zoom: 50%;
-  //box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
 }
