--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@
 
 body {
   --font: 'Merriweather', '楷体', '楷体-简';
-  --mono-font: 'JetBrains Mono', '楷体-简';
+  --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   font-family: var(--font);
   padding: 0;
   margin: 0;
