--- a/src/components/Callout/index.module.less
+++ b/src/components/Callout/index.module.less
@@ -5,7 +5,7 @@
   border-left: 0.3rem solid;
   border-color: var(--hint-border-color);
   border-radius: 0.5rem;
-  margin-bottom: 1em;
+  //margin-bottom: 1em;
   color: black;
 
   &.tip {
@@ -61,4 +61,9 @@
       background-image: var(--icon-url);
     }
   }
+}
+
+.addParagraph {
+  height: 10px;
+  cursor: pointer;
 }
