--- a/src/components/CodeBlock/index.module.less
+++ b/src/components/CodeBlock/index.module.less
@@ -1,5 +1,5 @@
 .codeBlockContainer {
-  margin-bottom: 10px;
+  //margin-bottom: 10px;
   position: relative;
   &:hover .copyButton {
     position: absolute;
