--- a/src/components/Detail/index.module.less
+++ b/src/components/Detail/index.module.less
@@ -8,6 +8,7 @@
     cursor: pointer;
     padding-bottom: 12px;
     display: flex;
+    gap: 5px;
     .arrow {
       transition: transform 0.4s ease-in-out;
       &.show {
