--- a/src/components/FormattedText/index.module.less
+++ b/src/components/FormattedText/index.module.less
@@ -1,8 +1,5 @@
 .bold {
   font-weight: bold;
-  //background-image: linear-gradient(to right, #c471f5 0%, #fa71cd 100%);
-  //color: transparent;
-  //-webkit-background-clip: text;
 }
 .italic {
   font-style: italic;
@@ -12,4 +9,7 @@
 }
 .code {
   color: #18045f;
+  background-color: rgba(250, 255, 100, 0.153);
+  padding: 4px 6px;
+  font-size: .9em;
 }
