--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -4,5 +4,5 @@
   margin: 0 auto 10px;
   zoom: 50%;
   border-radius: 6px;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
 }
