--- a/src/main.css
+++ b/src/main.css
@@ -2,9 +2,10 @@
 
 
 body {
-  --font: 'Merriweather', '楷体', '楷体-简';
+  --font: 'Merriweather', 'Source Han Sans SC VF', '楷体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   font-family: var(--font);
+  font-weight: 500;
   padding: 0;
   margin: 0;
 }
