--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -1,8 +1,54 @@
-.image {
+.imageContainer {
   display: block;
+  width: fit-content;
   max-width: 100%;
-  margin: 0 auto 10px;
-  zoom: 50%;
+  margin: 0 auto;
+  position: relative;
   border-radius: 6px;
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+
+  .actions {
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(38, 38, 38, 0.6);
+    border-radius: 8px;
+    transition: opacity .3s ease-in-out;
+  }
+  &:hover .actions {
+    opacity: 1;
+    color: white;
+    display: flex;
+
+    .overview {
+      width: 28px;
+      height: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+    .delete {
+      width: 28px;
+      height: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+    .divider {
+      width: 1px;
+      height: 18px;
+      margin: auto 4px;
+      background-color: white;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+
+  .image {
+    zoom: 50%;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+    cursor: pointer;
+  }
 }
