--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -47,8 +47,27 @@
   }
 
   .image {
+    max-width: 100%;
     zoom: 50%;
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
-    cursor: pointer;
+    cursor: zoom-in;
+  }
+}
+
+.uploadContainer {
+  padding: 36px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #FAFAFA;
+  border-radius: 8px;
+  border: 1px dashed #E7E9E8;
+  cursor: pointer;
+  &:hover {
+    border: 1px solid #2F8EF4;
+  }
+
+  .uploadText {
+    margin-top: 16px;
   }
 }
