--- a/src/components/ImagesOverview/index.module.less
+++ b/src/components/ImagesOverview/index.module.less
@@ -24,8 +24,11 @@
     position: relative;
     z-index: 2;
     width: fit-content;
+    max-width: 80%;
     .image {
-        box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+      max-width: 100%;
+      box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+      cursor: zoom-out;
     }
   }
 
