--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -1,49 +1,15 @@
 .imageContainer {
   display: block;
   width: fit-content;
-  max-width: 100%;
-  margin: 0 auto;
   position: relative;
   border-radius: 6px;
+  max-width: 100%;
+  margin: 8px auto;
 
-  .actions {
-    display: none;
-    opacity: 0;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: rgba(38, 38, 38, 0.6);
-    border-radius: 8px;
-    transition: opacity .3s ease-in-out;
-  }
   &:hover .actions {
     opacity: 1;
     color: white;
     display: flex;
-
-    .overview {
-      width: 28px;
-      height: 28px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
-    .delete {
-      width: 28px;
-      height: 28px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-    }
-    .divider {
-      width: 1px;
-      height: 18px;
-      margin: auto 4px;
-      background-color: white;
-      background-color: rgba(255, 255, 255, 0.1);
-    }
   }
 
   .image {
@@ -55,19 +21,60 @@
 }
 
 .uploadContainer {
+  position: relative;
   padding: 36px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: #FAFAFA;
-  border-radius: 8px;
+  border-radius: 6px;
   border: 1px dashed #E7E9E8;
   cursor: pointer;
+
   &:hover {
     border: 1px solid #2F8EF4;
+  }
+
+  &:hover .actions {
+    opacity: 1;
+    color: white;
+    display: flex;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .uploadText {
     margin-top: 16px;
   }
 }
+
+.actions {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  background-color: rgba(38, 38, 38, 0.6);
+  border-radius: 8px;
+  transition: opacity .3s ease-in-out;
+}
+
+.item {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.divider {
+  width: 1px;
+  height: 18px;
+  margin: auto 4px;
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+
