fix: 修复点击链接末尾无法从新的正常节点编辑

--- a/src/components/FormattedText/index.module.less
+++ b/src/components/FormattedText/index.module.less
@@ -12,4 +12,8 @@
   background-color: rgba(250, 255, 100, 0.153);
   padding: 4px 6px;
   font-size: .9em;
+  font-family: var(--mono-font, 'monospace');
+}
+.padding {
+  padding-left: 0.1px;
 }
