feat: 行内编辑体验优化

--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -4,7 +4,7 @@
   position: relative;
   border-radius: 6px;
   max-width: 100%;
-  margin: 8px auto;
+  margin: 16px auto 6px;
 
   &:hover .actions {
     opacity: 1;
