--- a/src/components/Blockquote/index.module.less
+++ b/src/components/Blockquote/index.module.less
@@ -1,5 +1,5 @@
 .blockquote {
-  margin: 0;
+  margin: 16px auto 6px;
   background-color: #f5f7f9;
   border-left: 4px solid #3884ff;
   border-radius: 0.3rem;
