--- a/src/components/Table/index.module.less
+++ b/src/components/Table/index.module.less
@@ -1,3 +1,21 @@
 .table {
+  border-collapse: collapse;
+  width: 100%;
 
+  tr:first-child {
+    font-weight: bold;
+  }
+
+  tr:nth-child(odd) {
+    background: #f6f6f7;
+  }
+
+  th, td {
+    padding: 12px 16px;
+    text-align: left;
+    border: 1px solid #ddd;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+  }
 }
