feat: 添加编辑数学公式的能力

--- a/src/components/Image/index.module.less
+++ b/src/components/Image/index.module.less
@@ -4,7 +4,7 @@
   position: relative;
   border-radius: 6px;
   max-width: 100%;
-  margin: 16px auto 6px;
+  margin: 16px auto 0;
 
   &:hover .actions {
     opacity: 1;
