--- a/src/components/Blockquote/index.module.less
+++ b/src/components/Blockquote/index.module.less
@@ -3,5 +3,5 @@
   background-color: #f5f7f9;
   border-left: 4px solid #3884ff;
   border-radius: 0.3rem;
-  padding: 4px 16px;
+  padding: 16px 16px 1px 24px;
 }
