--- a/src/components/Detail/index.module.less
+++ b/src/components/Detail/index.module.less
@@ -22,12 +22,14 @@
   .content {
     display: grid;
     grid-template-rows: 0fr;
-    transition: grid-template-rows 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     overflow: hidden;
     & > div {
       min-height: 0;
     }
     &.show {
+      box-sizing: border-box;
+      padding-top: 8px;
       grid-template-rows: 1fr;
     }
   }
