编辑体验优化

--- a/src/components/CheckList/index.module.less
+++ b/src/components/CheckList/index.module.less
@@ -1,6 +1,10 @@
 .list {
-  padding-left: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  margin: 0;
+  padding-inline-start: 20px;
+  li:last-of-type div *:last-child {
+    margin: 0;
+  }
+  li p {
+    margin-bottom: 14px;
+  }
 }
