--- a/src/components/CheckListItem/index.module.less
+++ b/src/components/CheckListItem/index.module.less
@@ -2,7 +2,8 @@
   display: flex;
   gap: 10px;
   align-items: flex-start;
+  line-height: 1.8;
   .checkbox {
-    transform: translateY(2px);
+    transform: translateY(3.5px);
   }
 }
