feat: 添加预览编辑组件

--- a/src/components/BlockMath/index.module.less
+++ b/src/components/BlockMath/index.module.less
@@ -1,6 +1,11 @@
 .blockMath {
   cursor: pointer;
+
   :global(div mjx-container[jax="CHTML"][display="true"]) {
     margin: 4px auto;
+  }
+  .empty {
+    margin: 16px auto;
+    color: #ccc;
   }
 }
