feat: 添加 tikz 绘图

--- a/src/components/BlockMath/index.module.less
+++ b/src/components/BlockMath/index.module.less
@@ -5,7 +5,11 @@
     margin: 4px auto;
   }
   .empty {
-    margin: 16px auto;
     color: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    cursor: pointer;
   }
 }
