--- a/src/components/PreviewWithEditor/index.module.less
+++ b/src/components/PreviewWithEditor/index.module.less
@@ -38,4 +38,10 @@
     background-color: #fafafa;
     padding: 0 0 16px;
   }
+
+  .preview.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
