feat: 添加 graphviz 支持

--- a/src/components/AddParagraph/index.module.less
+++ b/src/components/AddParagraph/index.module.less
@@ -1,7 +1,7 @@
 .addParagraph {
   height: 16px;
   cursor: pointer;
-  &:hover {
-    background-color: #fafafa;
-  }
+  //&:hover {
+  //  background-color: #fafafa;
+  //}
 }
