--- a/src/components/PreviewWithEditor/index.module.less
+++ b/src/components/PreviewWithEditor/index.module.less
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   .editor {
     height: auto;
     padding: 18px 12px 0;
@@ -43,5 +44,36 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .actions {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(38, 38, 38, 0.6);
+    border-radius: 8px;
+    color: white;
+
+    .item {
+      width: 28px;
+      height: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .divider {
+      width: 1px;
+      height: 18px;
+      margin: auto 4px;
+      background-color: white;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+
+  &:hover .actions {
+    display: flex;
   }
 }
