--- a/src/main.less
+++ b/src/main.less
@@ -2,7 +2,7 @@
 
 
 body {
-  --font: 'Merriweather Sans', 'Source Han Sans SC VF', '楷体', '楷体-简';
+  --font: 'Merriweather Sans', '楷体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   font-family: var(--font);
   font-weight: 500;
