--- a/src/pages/Index/Cards/CardItem/index.module.less
+++ b/src/pages/Index/Cards/CardItem/index.module.less
@@ -1,7 +1,7 @@
 .item {
   position: relative;
   background-color: #fff;
-  box-shadow: 0 1.5px 3px 0 rgba(0,0,0,.15);
+  box-shadow: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
   padding: 15px 15px 0;
   border-radius: 12px;
   box-sizing: border-box;
