--- a/src/pages/Index/Cards/index.module.less
+++ b/src/pages/Index/Cards/index.module.less
@@ -1,12 +1,15 @@
 .cardsManagement {
   padding: 40px 20px;
   margin-right: 100px;
+  position: relative;
+  //overflow: auto;
   .editorContainer {
     padding: 20px;
     border: 1px solid #e8e8e8;
     border-radius: 12px;
     margin-bottom: 20px;
     .editor {
+      max-height: 500px;
       min-height: 100px;
     }
     .footer {
@@ -20,6 +23,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    //overflow: auto;
     .cardItem {
       width: 280px;
       height: 280px;
