--- a/src/pages/Index/index.module.less
+++ b/src/pages/Index/index.module.less
@@ -1,4 +1,6 @@
 .container {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   height: 100vh;
   max-height: 100vh;
@@ -12,5 +14,6 @@
   }
   .detail {
     flex: 1;
+    overflow: hidden;
   }
 }
