--- a/src/pages/Edit/index.module.less
+++ b/src/pages/Edit/index.module.less
@@ -4,13 +4,21 @@
   justify-content: center;
   background-color: rgb(244, 244, 246);
   .editorContainer {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin: 40px;
     background-color: #fff;
     border-radius: 8px;
     .editor {
+      @media screen and (max-width: 1000px) {
+        width: 600px;
+      }
+      @media screen and (max-width: 700px) {
+        width: 400px;
+      }
+      @media screen and (max-width: 500px) {
+        width: 300px;
+        max-width: calc(100vw - 40px);
+      }
       width: 800px;
-      max-width: 1000px;
       min-height: calc(100vh - 80px);
       padding: 48px 64px;
       box-sizing: border-box;
