--- a/src/pages/Editor/components/HoveringToolbar/index.module.less
+++ b/src/pages/Editor/components/HoveringToolbar/index.module.less
@@ -2,11 +2,11 @@
   opacity: 0;
   position: absolute;
   z-index: 2;
-  top: -10000px;
-  left: -10000px;
+  top: -1000px;
+  left: -500px;
   transition: opacity 0.75s;
   padding: 4px;
   background-color: #E2E8F0;
   display: flex;
-  gap: 4px;
+  border-radius: 8px;
 }
