--- a/src/pages/Editor/components/AddParagraph/index.module.less
+++ b/src/pages/Editor/components/AddParagraph/index.module.less
@@ -1,7 +1,4 @@
 .addParagraph {
-  height: 16px;
+  height: var(--block-distance, 10px);
   cursor: pointer;
-  //&:hover {
-  //  background-color: #fafafa;
-  //}
 }
