--- a/src/pages/Editor/components/Blockquote/index.module.less
+++ b/src/pages/Editor/components/Blockquote/index.module.less
@@ -1,7 +1,7 @@
 .blockquote {
-  margin: 0 auto;
-  background-color: #f5f7f9;
-  border-left: 4px solid #3884ff;
-  border-radius: 0.3rem;
-  padding: 16px 16px 1px 24px;
+  margin: 20px 10px 10px 0;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-left: 3px solid rgba(0, 0, 0, 0.4);
+  padding: 20px 16px 10px 20px;
+  color: #6a737d;
 }
