--- a/src/pages/Editor/components/ImagesOverview/index.module.less
+++ b/src/pages/Editor/components/ImagesOverview/index.module.less
@@ -27,7 +27,10 @@
     max-width: 80%;
     .image {
       max-width: 100%;
+      max-height: 90vh;
       box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+      object-fit: contain;
+      object-position: center;
       cursor: zoom-out;
     }
   }
