feat: add electron support

--- a/src/pages/Editor/components/MermaidChart/index.module.less
+++ b/src/pages/Editor/components/MermaidChart/index.module.less
@@ -10,4 +10,7 @@
     cursor: pointer;
     user-select: none;
   }
+  svg {
+    font-family: var(--font, '"Merroweather", "楷体", "楷体-简"') !important;
+  }
 }
