--- a/src/pages/Index/Cards/index.module.less
+++ b/src/pages/Index/Cards/index.module.less
@@ -9,7 +9,7 @@
     border-radius: 12px;
     margin-bottom: 20px;
     .editor {
-      max-height: 500px;
+      //max-height: 500px;
       min-height: 100px;
     }
     .footer {
