feat: add language select

--- a/src/pages/Editor/components/CodeBlock/index.module.less
+++ b/src/pages/Editor/components/CodeBlock/index.module.less
@@ -1,8 +1,9 @@
 .codeBlockContainer {
-  //margin-bottom: 10px;
   position: relative;
-  &:hover .copyButton {
+  .copyButton {
     position: absolute;
+    opacity: 0;
+    transition: opacity 0.2s linear;
     top: 10px;
     right: 10px;
     width: 32px;
@@ -12,6 +13,9 @@
     border: 1px solid rgba(0 0 0 / 10%);
     cursor: pointer;
   }
+    &:hover .copyButton {
+      opacity: 1;
+    }
   .windowsControl {
     position: absolute;
     top: 24px;
@@ -24,6 +28,17 @@
     border-radius: 50%;
     background-color: #E0443E;
     box-shadow: 24px 0 #dea123, 48px 0 #1aab29;
+  }
+  .languageSelect {
+    opacity: 0;
+    transition: opacity 0.2s linear;
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    z-index: 1;
+  }
+  &:hover .languageSelect {
+    opacity: 1;
   }
   .CodeMirrorContainer :global(.CodeMirror) {
     color: #F8F8F8;
