feat: 添加删除线

--- a/src/pages/Editor/components/FormattedText/index.module.less
+++ b/src/pages/Editor/components/FormattedText/index.module.less
@@ -7,6 +7,9 @@
 .underline {
   text-decoration: underline;
 }
+.strikethrough {
+  text-decoration: line-through;
+}
 .code {
   color: #18045f;
   background-color: rgba(250, 255, 100, 0.153);
