--- a/src/main.less
+++ b/src/main.less
@@ -2,7 +2,7 @@
 
 
 body {
-  --font: 'Merriweather Sans', '楷体', '楷体-简';
+  --font: 'Ubuntu', '黑体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   --block-distance: 12px;
   font-family: var(--font);
