--- a/src/pages/Index/Cards/CardItem/index.module.less
+++ b/src/pages/Index/Cards/CardItem/index.module.less
@@ -1,52 +1,26 @@
 .item {
   position: relative;
+  width: 280px;
   background-color: #fff;
   box-shadow: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
-  padding: 15px 15px 0;
-  border-radius: 12px;
+  padding: 16px 16px 0;
+  border-radius: 8px;
   box-sizing: border-box;
   .tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 8px;
-    margin-bottom: 10px;
   }
   .time {
     font-size: .8em;
     opacity: 0.7;
   }
   .content {
+    height: 120px;
+    overflow: auto;
     margin-top: 16px;
-  }
-  .actions {
-    opacity: 0;
-    transition: opacity .2s ease-in-out;
-    color: white;
-    display: flex;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 100;
-    background-color: rgba(38, 38, 38, 0.6);
-    border-radius: 8px;
-    .actionItem {
-      width: 28px;
-      height: 28px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
+    &::-webkit-scrollbar {
+      display: none;
     }
-    .divider {
-      width: 1px;
-      height: 18px;
-      margin: auto 4px;
-      background-color: white;
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-  }
-  &:hover .actions {
-    opacity: 1;
-    color: white;
-    display: flex;
   }
 }
