--- a/src/pages/Index/Cards/index.module.less
+++ b/src/pages/Index/Cards/index.module.less
@@ -1,33 +1,24 @@
 .cardsManagement {
-  padding: 40px 20px;
-  margin-right: 100px;
   position: relative;
-  //overflow: auto;
-  .editorContainer {
-    padding: 20px;
-    border: 1px solid #e8e8e8;
-    border-radius: 12px;
-    margin-bottom: 20px;
-    .editor {
-      //max-height: 500px;
-      min-height: 100px;
-    }
-    .footer {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 10px;
-    }
+  width: fit-content;
+  margin: 0 auto;
+
+  .sidebar {
+    position: fixed;
+    top: 40px;
+    left: 0;
+    bottom: 0;
+    width: 200px;
+    background-color: #fff;
+    z-index: 98;
+    overflow-y: auto;
+    padding: 20px 0;
   }
 
   .cardList {
+    margin-left: 200px;
     display: flex;
-    flex-direction: column;
-    gap: 12px;
-    //overflow: auto;
-    .cardItem {
-      width: 280px;
-      height: 280px;
-      border-radius: 20px;
-    }
+    flex-wrap: wrap;
+    gap: 20px;
   }
 }
