--- a/src/pages/Index/index.module.less
+++ b/src/pages/Index/index.module.less
@@ -1,19 +1,40 @@
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
   height: 100vh;
-  max-height: 100vh;
-  .sidebar {
-    width: 300px;
-    flex-shrink: 0;
-    border: 1px solid #eee;
-    padding: 40px 20px;
-    height: 100%;
-    box-sizing: border-box;
+  overflow: auto;
+
+  /* 滚动槽 */
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.06);
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+  }
+  /* 滚动条滑块 */
+  &::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.12);
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    height: 40px;
+    position: sticky;
+    background-color: #fff;
+    top: 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 99;
   }
   .detail {
-    flex: 1;
-    //overflow: hidden;
+    box-sizing: border-box;
+    padding: 20px 50px;
+    min-height: calc(100vh - 40px);
   }
 }
