feat: 添加卡片的基本能力

--- a/src/pages/Index/Cards/index.module.less
+++ b/src/pages/Index/Cards/index.module.less
@@ -1,7 +1,9 @@
 .cardsManagement {
   position: relative;
-  width: fit-content;
-  margin: 0 auto;
+  .center {
+    width: fit-content;
+    margin: 0 auto;
+  }
 
   .sidebar {
     position: fixed;
