--- a/src/main.less
+++ b/src/main.less
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-
 body {
   --font: 'Ubuntu', '黑体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
@@ -68,5 +67,22 @@ p {
   .cm-tag {
     color: #e45649;
   }
+}
+
+/* 滚动槽 */
+&::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+&::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background: rgba(0,0,0,0.06);
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+}
+/* 滚动条滑块 */
+&::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background: rgba(0,0,0,0.12);
+  -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
 }
 
