--- a/src/pages/Index/Cards/CardItem/index.module.less
+++ b/src/pages/Index/Cards/CardItem/index.module.less
@@ -6,14 +6,10 @@
   padding: 16px 16px 0;
   border-radius: 8px;
   box-sizing: border-box;
-  .tags {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-  }
   .time {
     font-size: .8em;
     opacity: 0.7;
+    margin-top: 10px;
   }
   .content {
     height: 120px;
