--- a/src/main.less
+++ b/src/main.less
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
-  --font: 'Ubuntu', '黑体', '楷体-简';
+  --font: 'Ubuntu', '楷体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   --block-distance: 12px;
   font-family: var(--font);
@@ -84,5 +84,13 @@ p {
   border-radius: 3px;
   background: rgba(0,0,0,0.12);
   -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+}
+
+[class*=" ant-"] {
+  font-family: var(--font) !important;
+}
+
+.command-palette {
+  z-index: 9999;
 }
 
