--- a/src/pages/Cards/EditCardModal/index.module.less
+++ b/src/pages/Cards/EditCardModal/index.module.less
@@ -1,6 +1,7 @@
 .modal {
   font-family: var(--font);
   :global(.ant-modal-body) {
+    font-size: var(--font-size, 18px);
     &::-webkit-scrollbar {
       display: none;
     }
