--- a/src/pages/Index/index.module.less
+++ b/src/pages/Index/index.module.less
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  overflow: auto;
+  //overflow: auto;
   display: flex;
   .sidebar {
     position: fixed;
@@ -32,6 +32,7 @@
     position: relative;
     box-sizing: border-box;
     min-height: calc(100vh);
+    overflow: auto;
     margin-left: 250px;
     margin-right: 40px;
     width: calc(100vw - 290px);
