feat: 卡片详情修复

--- a/src/pages/Index/index.module.less
+++ b/src/pages/Index/index.module.less
@@ -29,6 +29,8 @@
     }
   }
   .detail {
+    //background-image: url('https://cdn.staticaly.com/gh/LastKnightCoder/image-for-2022@master/iain-kennedy-cTWjHBFaufs-unsplash.5o2iiqb846g0.jpg');
+    //background-color: #51c4d3;
     position: relative;
     box-sizing: border-box;
     min-height: calc(100vh);
