--- a/src/pages/Cards/CardDetail/AddCardLinkModal/index.module.less
+++ b/src/pages/Cards/CardDetail/AddCardLinkModal/index.module.less
@@ -1,13 +1,13 @@
-.modal {
+.drawer {
   font-family: var(--font);
-  :global(.ant-modal-body) {
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
   .linkTitle {
-    margin: 10px 0;
+    margin: 20px 0;
     font-weight: bold;
     font-size: 16px;
+  }
+  .footer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
   }
 }
