--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -2,7 +2,8 @@
   position: relative;
   //width: 280px;
   width: 100%;
-  background-color: #fff;
+  background: #fff;
+  //background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
   padding: 16px 16px 0;
   border-radius: 8px;
