feat: 添加搜索记录面板

--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -23,6 +23,24 @@
     }
     .input {
       margin-left: auto;
+      position: relative;
+    }
+    .searchTips {
+      position: absolute;
+      top: calc(100% + 10px);
+      width: 100%;
+      left: 0;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
+      padding: 20px;
+      box-sizing: border-box;
+      .title {
+        font-size: 14px;
+        color: rgba(0, 0, 0, .8);
+        font-weight: bold;
+        margin-bottom: 16px;
+      }
     }
   }
 
