feat: 可通过删除键删除标签，历史记录点击 bug，esc 隐藏搜索记录面板

--- a/src/components/Tags/index.module.less
+++ b/src/components/Tags/index.module.less
@@ -15,5 +15,6 @@
     align-items: center;
     font-family: 'Ubuntu', '楷体', '楷体-简', sans-serif;
     font-size: 12px;
+    cursor: pointer;
   }
 }
