--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -35,11 +35,16 @@
       box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
       padding: 20px;
       box-sizing: border-box;
-      .title {
-        font-size: 14px;
-        color: rgba(0, 0, 0, .8);
-        font-weight: bold;
+      .searchHeader {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         margin-bottom: 16px;
+        .title {
+          font-size: 14px;
+          color: rgba(0, 0, 0, .8);
+          font-weight: bold;
+        }
       }
     }
   }
