--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -1,6 +1,5 @@
 .cardDetail {
   position: relative;
-  background-color: #f9f9f9;
   .header {
     display: flex;
     align-items: center;
@@ -11,7 +10,7 @@
     z-index: 100;
     box-sizing: border-box;
     padding: 0 40px;
-    background-color: #f9f9f9;
+    background: var(--header-bg-color, '#fff');
     &::before {
       position: absolute;
       bottom: 0;
@@ -31,36 +30,27 @@
   }
   .editorContainer {
     display: flex;
-    padding: 0 40px;
+    justify-content: space-between;
+    padding: 40px;
     gap: 20px;
-    .editorWrapper {
-      padding: 20px 0;
-      min-width: 600px;
-      flex-grow: 1;
-      flex-shrink: 0;
-    }
     .editor {
-      max-width: 800px;
-      @media screen and (max-width: 1280px) {
-        max-width: 700px;
-      }
-      margin: 0 auto;
-      background-color: #fff;
-      padding: 48px 64px;
       box-sizing: border-box;
-      border-radius: 16px;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
       min-height: calc(100vh - 100px);
+      min-width: 600px;
+      @media screen and (min-width: 1400px) {
+        min-width: 0;
+        width: 1000px;
+      }
     }
     .sidebar {
-      min-width: 320px;
-      max-width: 500px;
-      @media screen and (max-width: 1280px) {
-        max-width: 320px;
-      }
       position: sticky;
       top: 60px;
       padding: 20px;
+      min-width: 320px;
+      @media screen and (min-width: 1400px) {
+        min-width: 480px;
+        max-width: 480px;
+      }
       height: calc(100vh - 60px);
       box-sizing: border-box;
       overflow-y: auto;
