feat: 默认黑暗主题

--- a/src/components/Editor/components/FormattedText/index.module.less
+++ b/src/components/Editor/components/FormattedText/index.module.less
@@ -11,9 +11,11 @@
   text-decoration: line-through;
 }
 .code {
-  color: #18045f;
-  background-color: rgba(250, 255, 100, 0.153);
-  padding: 4px 6px;
+  //color: #18045f;
+  color: var(--code-normal, #FBDE2D);
+  //background-color: rgba(250, 255, 100, 0.153);
+    background-color: var(--code-bg, transparent);
+  padding: 4px;
   font-size: .9em;
   font-family: var(--mono-font, 'monospace');
 }
