--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -14,10 +14,10 @@
     &::before {
       position: absolute;
       bottom: 0;
-      height: 2px;
+      height: 1px;
       width: calc(100% - 80px);
       content: '';
-      background-color: #eee;
+      background-color: var(--line-color);
       margin: 0 auto;
     }
     .back {
@@ -60,7 +60,6 @@
         display: none;
       }
       .title {
-        color: rgba(0, 0, 0, .9);
         font-weight: bold;
         margin-bottom: 10px;
       }
