--- a/src/pages/Cards/CardItem/Footer/index.module.less
+++ b/src/pages/Cards/CardItem/Footer/index.module.less
@@ -12,16 +12,16 @@
     .item {
       width: 28px;
       height: 28px;
-      color: rgba(0,0,0,.85);
+      color: var(--text-normal);
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: pointer;
       font-size: 12px;
       border-radius: 50%;
-      background-color: rgba(0, 0, 0, 0.04);
+      background-color: var(--footer-item-bg);
       &:hover {
-        background-color: rgba(26, 102, 255, 0.1)
+        background-color: var(--footer-item-hover-bg);
       }
     }
   }
