--- a/src/pages/Cards/CardDetail/CardList/index.module.less
+++ b/src/pages/Cards/CardDetail/CardList/index.module.less
@@ -7,12 +7,12 @@
     position: relative;
     padding: 40px;
     cursor: pointer;
-    background-color: #fff;
+    background-color: var(--card-item-bg, #fff);
     background: var(--clay-background, rgba(0, 0, 0, .005));
     border-radius: var(--clay-border-radius, 16px);
     box-shadow: var(--clay-shadow-outset, 4px 4px 8px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-primary,-4px -4px 8px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-secondary, 4px 4px 8px 0 hsla(0, 0%, 100%, .2));
     &.hover:hover {
-      background-color: rgba(26, 102, 255, 0.1)
+      background-color: var(--card-item-hover-bg);
     }
     .tags {
       margin-bottom: 10px;
@@ -36,7 +36,7 @@
   }
   .divider {
     margin: 20px;
-    height: 2px;
-    background-color: rgba(0, 0, 0, 0.3);
+    height: 1px;
+    background-color: var(--line-color);
   }
 }
