--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -1,8 +1,8 @@
 .item {
   position: relative;
   width: 100%;
-  background: #fff;
-  box-shadow: 0 1.5px 3px 0 rgba(0, 0, 0, .15);
+  background: var(--card-item-bg);
+  box-shadow: var(--box-shadow1);
   padding: 16px 16px 0;
   border-radius: 8px;
   box-sizing: border-box;
