--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -7,7 +7,7 @@
     gap: 10px;
     align-items: center;
     height: 60px;
-    background: var(--header-bg-color, '#fff');
+    background-color: var(--header-bg-color);
     position: sticky;
     top: 0;
     z-index: 100;
@@ -22,7 +22,7 @@
       width: calc(100% - 80px);
       height: 1px;
       content: '';
-      background-color: #eee;
+      background-color: var(--line-color);
       margin: 0 auto;
     }
     .input {
@@ -34,9 +34,9 @@
       top: calc(100% + 10px);
       width: 100%;
       left: 0;
-      background: #fff;
+      background-color: var(--search-tips-bg, #fff);
       border-radius: 8px;
-      box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
+      box-shadow: var(--box-shadow1);
       padding: 20px;
       box-sizing: border-box;
       .searchHeader {
@@ -46,7 +46,6 @@
         margin-bottom: 16px;
         .title {
           font-size: 14px;
-          color: rgba(0, 0, 0, .8);
           font-weight: bold;
         }
       }
