feat: 编辑页UI更新

--- a/src/components/Editor/components/BlockPanel/Item/index.module.less
+++ b/src/components/Editor/components/BlockPanel/Item/index.module.less
@@ -9,13 +9,13 @@
     justify-content: space-between;
   }
   &:hover {
-    background: #f6f8fa;
+    background: var(--block-panel-active-bg);
   }
   .bottomLine {
     height: 1px;
-    background: #eaecef;
+    background: var(--line-color);
   }
   &.active {
-    background: #f6f8fa;
+    background: var(--block-panel-active-bg);
   }
 }
