--- a/src/components/Editor/components/Image/index.module.less
+++ b/src/components/Editor/components/Image/index.module.less
@@ -23,7 +23,7 @@
 .uploadContainer {
   position: relative;
   padding: 36px;
-  background-color: #FAFAFA;
+  background-color: var(--bg-color);
   border-radius: 6px;
   border: 1px dashed #E7E9E8;
   cursor: pointer;
