--- a/src/components/Editor/components/BlockPanel/List/index.module.less
+++ b/src/components/Editor/components/BlockPanel/List/index.module.less
@@ -4,9 +4,8 @@
   max-height: 300px;
   overflow-y: auto;
   flex-direction: column;
-  background-color: #fff;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
-  //border: 1px solid #e1e4e8;
+  background-color: var(--block-panel-bg);
+  box-shadow: var(--box-shadow1);
   border-radius: 6px;
   // 隐藏滚动条
   &::-webkit-scrollbar {
