--- a/src/main.less
+++ b/src/main.less
@@ -12,6 +12,7 @@ body {
   --card-item-bg: var(--primary-bg-color);
   --detail-bg-color: var(--primary-bg-color);
   --header-bg-color: var(--primary-bg-color);
+  --block-panel-bg: var(--primary-bg-color);
   background-color: var(--primary-bg-color);
   font-family: var(--font);
   color: var(--text-normal);
