--- a/src/pages/Cards/CardDetail/CardList/index.module.less
+++ b/src/pages/Cards/CardDetail/CardList/index.module.less
@@ -3,14 +3,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 10px;
   .item {
     position: relative;
     padding: 40px;
     cursor: pointer;
-    background-color: var(--card-item-bg, #fff);
-    background: var(--clay-background, rgba(0, 0, 0, .005));
-    border-radius: var(--clay-border-radius, 16px);
-    box-shadow: var(--clay-shadow-outset, 4px 4px 8px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-primary,-4px -4px 8px 0 rgba(0, 0, 0, .25)), inset var(--clay-shadow-inset-secondary, 4px 4px 8px 0 hsla(0, 0%, 100%, .2));
+    background-color: var(--card-item-bg);
+    box-shadow: var(--box-shadow1);
+    border-radius: 8px;
     &.hover:hover {
       background-color: var(--card-item-hover-bg);
     }
