--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,12 +1,13 @@
 html[data-theme="dark"] {
   --primary-bg-color: #000;
   --line-color: rgba(86, 84, 84, 0.76);
-  --card-item-hover-bg: rgba(1, 27, 37, 0.93);
+  --card-item-hover-bg: rgba(1, 27, 37, 0.9);
   --catd-item-divider: rgba(255, 255, 255, 0.3);
   --text-normal: rgba(255, 255, 255, .9);
   --footer-item-bg: rgba(139, 145, 231, 0.5);
   --footer-item-hover-bg: rgba(139, 145, 231, 0.9);
   --code-normal: #FBDE2D;
   --code-bg: transparent;
-  --box-shadow1: 0 1.5px 3px 0 rgba(217, 217, 227, 0.43);
+  --box-shadow1: 0px 2px 4px 0 rgba(217, 217, 227, 0.32);
+  --block-panel-active-bg: #1a1b1d;
 }
