feat: 性能优化，关系图谱

--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -13,7 +13,7 @@
   }
   .content {
     height: 120px;
-    overflow: auto;
+    overflow: hidden;
     margin-top: 16px;
     &::-webkit-scrollbar {
       display: none;
