--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -2,10 +2,10 @@
   position: relative;
   .editorContainer {
     padding: 40px;
-    max-width: 600px;
+    max-width: clamp(600px, 80%, 1000px);
     margin: 0 auto;
     .tags {
-
+      margin-top: 20px;
     }
     .editor {
 
