--- a/src/components/Editor/components/Blockquote/index.module.less
+++ b/src/components/Editor/components/Blockquote/index.module.less
@@ -1,5 +1,5 @@
 .blockquote {
-  margin: 20px 10px 10px 0;
+  margin: 0;
   background-color: rgba(0, 0, 0, 0.05);
   border-left: 3px solid rgba(0, 0, 0, 0.4);
   padding: 20px 16px 10px 20px;
