feat: 日记功能 bug 修复

--- a/src/pages/DailyNote/index.module.less
+++ b/src/pages/DailyNote/index.module.less
@@ -1,3 +1,16 @@
 .dailyNote {
-
+  .dailyNoteItem {
+    position: relative;
+    .delete {
+      display: none;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+    &:hover {
+      .delete {
+        display: block;
+      }
+    }
+  }
 }
