--- a/src/pages/Index/index.module.less
+++ b/src/pages/Index/index.module.less
@@ -7,7 +7,7 @@
     left: 0;
     bottom: 0;
     width: 250px;
-    background-color: var(--sidebar-bg-color, #fff);
+    background-color: var(--primary-bg-color);
     height: 100vh;
     transition: width .2s ease-in-out;
     .menu {
@@ -28,7 +28,7 @@
     }
   }
   .detail {
-    background-color: var(--detail-bg-color, #fff);
+    background-color: var(--primary-bg-color);
     position: relative;
     box-sizing: border-box;
     min-height: calc(100vh);
