--- a/src/pages/Cards/CardDetail/index.module.less
+++ b/src/pages/Cards/CardDetail/index.module.less
@@ -2,13 +2,10 @@
   position: relative;
   .editorContainer {
     padding: 40px;
-    max-width: clamp(400px, 60%, 600px);
+    width: 600px;
     margin: 0 auto;
     .tags {
       margin-top: 20px;
-    }
-    .editor {
-
     }
   }
 }
