--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -6,6 +6,10 @@
   padding: 16px 16px 0;
   border-radius: 8px;
   box-sizing: border-box;
+  &:hover {
+    background-color: rgba(47, 49, 52, 0.34);
+    cursor: pointer;
+  }
   .time {
     font-size: .8em;
     opacity: 0.7;
