--- a/src/components/Editor/components/PreviewWithEditor/index.module.less
+++ b/src/components/Editor/components/PreviewWithEditor/index.module.less
@@ -36,7 +36,7 @@
     height: 2px;
   }
   &.editing {
-    background-color: #fafafa;
+    background-color: rgb(12, 16, 33);
     padding: 0 0 16px;
   }
 
