--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -65,3 +65,71 @@
     }
   }
 }
+
+.cardsContainer {
+  display: flex;
+  height: calc(100vh - var(--title-bar-height));
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 300px;
+    box-sizing: border-box;
+    padding: 20px;
+    height: 100%;
+    border-right: 1px solid var(--line-color);
+    .header {
+      display: flex;
+      gap: 10px;
+      height: 36px;
+      align-items: center;
+      .input {
+        position: relative;
+        z-index: 1;
+      }
+      .create {
+        flex-shrink: 0;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        background: #17171a;
+      }
+      .searchTips {
+        position: absolute;
+        top: calc(100% + 10px);
+        width: 100%;
+        left: 0;
+        background-color: var(--search-tips-bg, #fff);
+        border-radius: 8px;
+        box-shadow: var(--box-shadow1);
+        padding: 20px;
+        box-sizing: border-box;
+        .searchHeader {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 16px;
+          .title {
+            font-size: 14px;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+    .cardList {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      overflow-y: auto;
+    }
+  }
+  .content {
+    height: 100%;
+    overflow-y: auto;
+    flex: 1;
+  }
+}
