--- a/src/pages/Cards/CardItem/index.module.less
+++ b/src/pages/Cards/CardItem/index.module.less
@@ -6,9 +6,15 @@
   padding: 16px 16px 0;
   border-radius: 8px;
   box-sizing: border-box;
+  border: 2px solid transparent;;
   &:hover {
     background-color: rgba(47, 49, 52, 0.34);
+    border: 2px solid rgb(47, 49, 52);
     cursor: pointer;
+  }
+  &.active {
+    background-color: rgba(47, 49, 52, 0.34);
+    border: 2px solid rgb(47, 49, 52);
   }
   .time {
     font-size: .8em;
