--- a/src/components/Editor/components/PreviewWithEditor/index.module.less
+++ b/src/components/Editor/components/PreviewWithEditor/index.module.less
@@ -67,9 +67,8 @@
     .divider {
       width: 1px;
       height: 18px;
-      margin: auto 4px;
-      background-color: white;
-      background-color: rgba(255, 255, 255, 0.1);
+      margin: 8px 4px;
+      background-color: var(--line-color);
     }
   }
 
