--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 300px;
+    width: 100%;
     box-sizing: border-box;
     padding: 20px;
     height: 100%;
@@ -18,6 +18,7 @@
       .input {
         position: relative;
         z-index: 1;
+        flex: 1;
       }
       .create {
         flex-shrink: 0;
@@ -33,7 +34,7 @@
       .searchTips {
         position: absolute;
         top: calc(100% + 10px);
-        width: 100%;
+        width: calc(100% + 46px);
         left: 0;
         background-color: var(--search-tips-bg, #fff);
         border-radius: 8px;
