feat: 添加统计数据

--- a/src/pages/Cards/index.module.less
+++ b/src/pages/Cards/index.module.less
@@ -13,28 +13,27 @@
     .header {
       display: flex;
       gap: 10px;
-      height: 36px;
-      align-items: center;
+      flex-direction: column;
+      .total {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .number {
+          font-weight: bold;
+        }
+        .create {
+          flex-shrink: 0;
+        }
+      }
       .input {
         position: relative;
         z-index: 1;
         flex: 1;
       }
-      .create {
-        flex-shrink: 0;
-        border-radius: 50%;
-        width: 36px;
-        height: 36px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        background: #17171a;
-      }
       .searchTips {
         position: absolute;
         top: calc(100% + 10px);
-        width: calc(100% + 46px);
+        width: 100%;
         left: 0;
         background-color: var(--search-tips-bg, #fff);
         border-radius: 8px;
