--- a/src/pages/Cards/LinkGraph/index.module.less
+++ b/src/pages/Cards/LinkGraph/index.module.less
@@ -1,3 +1,8 @@
+.container {
+  width: 100%;
+  height: calc(100vh - var(--title-bar-height));
+}
+
 .editor {
   position: absolute;
   padding: 20px;
