feat: 可配置文字大小，bug 修复

--- a/src/main.less
+++ b/src/main.less
@@ -5,6 +5,7 @@
 body {
   --font: 'Merriweather', '新宋体', '宋体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
+  --font-size: 16px;
   --block-distance: 12px;
   --sidebar-bg: var(--primary-bg-color);
   --right-sidebar-bg: var(--primary-bg-color);
@@ -16,6 +17,7 @@ body {
   background-color: var(--primary-bg-color);
   font-family: var(--font);
   color: var(--text-normal);
+  font-size: var(--font-size);
   padding: 0;
   margin: 0;
 }
