--- a/src/layouts/DefaultLayout/Sidebar/index.module.less
+++ b/src/layouts/DefaultLayout/Sidebar/index.module.less
@@ -5,4 +5,9 @@
   justify-content: space-between;
   padding: 40px 0;
   box-sizing: border-box;
+  .settingList {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
