--- a/src/main.less
+++ b/src/main.less
@@ -35,6 +35,10 @@ p {
   outline-style: none;
 }
 
+:root[data-theme="dark"] img {
+  filter: brightness(0.75);
+}
+
 .CodeMirror.cm-s-one-light {
   background: #fafafa;
   line-height: 1.8;
